# block-enter

./: .eslintrc.json  README.md  biome.jsonc  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/: renovate.json
.github/workflows/: codecov.yaml  submit.yaml  submit.yml  test.yaml  test.yml
assets/locales/en/: messages.json
assets/locales/ja/: messages.json
src/: background.ts  content.ts  popup.tsx
src/background/: index.ts
src/background/messages/: enabled-changed.ts
src/components/ui/: label.tsx  switch.tsx
src/lib/: config.ts  utils.ts
src/scripts/: circle_crop.py  resize_image.py
test/: popup.test.tsx
tests/: popup.test.tsx
