[project]
name = "block-enter"
version = "1.1.0"
description = "Block Enter"
authors = [{ name = "yuta-nishi" }]
dependencies = ["pillow>=10.0.0", "fire>=0.5.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "pip-search~=0.0.12",
  "black~=23.9.1",
  "ruff>=0.0.287",
  "mypy>=1.5.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 90

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
select = [
  "F", # pyflakes
  "E", # pycodestyle
  "W", # pycodestyle warnings
  "I", # isort
]
ignore = []
line-length = 90
