[project]
authors = [{ name = "yuta-nishi" }]
dependencies = ["fire>=0.5.0", "pillow>=10.0.0"]
description = "Block Enter"
name = "block-enter"
readme = "README.md"
requires-python = ">= 3.8"
version = "1.1.4"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = ["black~=23.9.1", "mypy>=1.5.1", "pip-search~=0.0.12", "ruff>=0.0.287"]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 90

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.ruff]
ignore = []
line-length = 90
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "W", # pycodestyle warnings
]
